welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:42: error: Unmatched closing brace '}' ignored here
}
^caughtSpeeding:70: error: eof expected but '}' found.
 }
 ^